C# 데이터그리드뷰 focus 위로 C# 데이터그리드뷰 특정값 열 색상 채우기 C# 폴더열기

--- a/MQTTClient/App.config
+++ b/MQTTClient/App.config
@@ -1,6 +1,84 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MQTTClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <MQTTClient.Properties.Settings>
+            <setting name="host" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="port" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qos" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="retain" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="topicSub" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPubCheck" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="topicPub1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPm1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPub2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPm2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPub3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPm3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPub4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicPm4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="topicLogCreate" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="topicList" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="red" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="green" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="yellow" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="gray" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="navy" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="purple" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="lime" serializeAs="String">
+                <value />
+            </setting>
+        </MQTTClient.Properties.Settings>
+    </userSettings>
 </configuration>
