--- a/MQTTClient/packages.config
+++ b/MQTTClient/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="M2Mqtt" version="4.3.0.0" targetFramework="net472" />
   <package id="MQTTnet" version="3.1.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
